Settle Spanner's competing idioms rather than merely aligning them
Three findings from the module's audit, in the shape #920 used for Bigtable.

Blank checks: this module held every remaining site of the losing idiom.
Repository-wide there are two blank semantics, not three -- `Character.isWhitespace`
at 50 sites (`isBlank()` 28, Flink's `StringUtils.isNullOrWhitespaceOnly` 22) and
`trim()`'s "at or below U+0020" at 5, all of them here, one of them eight lines
from an `isBlank()` in the same file. Converting the five leaves the repository
uniform at 55/55. The choice between the two calls is not a third idiom and is
left alone: measured over the whole Unicode code space they disagree on nothing
but null, so each of the five conversions takes whichever one matches its null
contract.

The difference between the old idiom and the new runs both ways. Of the BMP's
single characters 15 become newly rejected and 23 newly accepted, so the ASCII
assertions the module already had pass under either idiom and pinned nothing; a
U+2028 sentinel is what pins them, and each of the five was mutated on its own
to prove its sentinel reaches it. Two branches had no test at all:
`SpannerIdentifier`, which has no test class and is reachable only through the
table factory, and `nativeApiKey`'s blank guard.

Qualified names: ten references across three files spelled a type out in full
where the file imports nothing of that name, including two `ValidationException`s
in a file that imports it and seven `LogicalTypeRoot`s.

The lookup's retry set: argued nowhere, and Bigtable's argument does not carry
over. Its three statuses are not the client's set, because `readRow` reaches
`StreamingRead` rather than the unary `Read` and `SpannerStubSettings` gives that
RPC an empty retryable set; of the three only `UNAVAILABLE` is retried underneath,
so the other two would be retried by nobody without this loop. `RESOURCE_EXHAUSTED`
stays out, and what separates this loop from the sink's set of the same 